# kwin-effects-yet-another-magic-lamp-reloaded

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: build-arch.yml  build-fedora.yml  build-opensuse.yml  build-ubuntu.yml
src/: CMakeLists.txt  Model.cc  Model.h  YetAnotherMagicLampEffect.cc  YetAnotherMagicLampEffect.h  kwincompat.h  options.kcfg
src/kcm/: YetAnotherMagicLampEffectKCM.ui
